--- a/.github/ISSUE_TEMPLATE/change_request.yml
+++ b/.github/ISSUE_TEMPLATE/change_request.yml
@@ -1,5 +1,6 @@
 name: Change Request
 description: Request a new change or an improvement
+title: "[Feature Request]"
 labels: ["change request"]
 assignees:
   - rebelinux
